@@ -8,6 +8,7 @@ Changes in version 3.2 M2 (2012-08-xx)
 
 * spring-test module now depends on junit:junit-dep (SPR-6966)
 * now inferring return type of parameterized factory methods (SPR-9493)
+* SpEL Tokenizer now supports methods on integers (SPR-9612)
 * now using BufferedInputStream in SimpleMetaDataReader to double performance (SPR-9528)
 * introduced "repeatCount" property in Quartz SimpleTriggerFactoryBean (SPR-9521)
 * introduced "jtaTransactionManager" property in Hibernate 4 LocalSessionFactoryBean/Builder (SPR-9480)
